@@ -5,6 +5,10 @@ Todo for 1.0:
     broken for oracle and mssql (ok in sqlite).
 
 Todo for 1.1:
+  * generalize connection pool as connection provider, to facilitate
+    declaring initialization SQL or other actions at connection
+    creation time.
+   
   * iterSome, iterfetch (may require Python 2.5 implementing PEP 342,
     as resource cleanup needs to be done when a generator yielding
     results is gced).  These would be generator methods, yielding
